[gd_scene load_steps=14 format=3 uid="uid://bhlvlj1sego10"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_m55c0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1m70y"]
bg_color = Color(0.662745, 0.0745098, 0.403922, 1)
border_width_bottom = 3
border_color = Color(0.4, 0.0235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cihuc"]
bg_color = Color(0.882353, 0.180392, 0.552941, 1)
border_width_bottom = 3
border_color = Color(0.462745, 0.0235294, 0.239216, 1)

[sub_resource type="Theme" id="Theme_1eeip"]
Button/styles/hover = SubResource("StyleBoxFlat_1m70y")
Button/styles/normal = SubResource("StyleBoxFlat_cihuc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5xb8"]
bg_color = Color(0.662745, 0.0745098, 0.403922, 1)
border_width_bottom = 3
border_color = Color(0.4, 0.0235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i1i8"]
bg_color = Color(0.882353, 0.180392, 0.552941, 1)
border_width_bottom = 3
border_color = Color(0.403922, 0.0235294, 0.239216, 1)

[sub_resource type="Theme" id="Theme_w4rj8"]
Button/styles/hover = SubResource("StyleBoxFlat_y5xb8")
Button/styles/normal = SubResource("StyleBoxFlat_7i1i8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oi3wl"]
bg_color = Color(0.662745, 0.0745098, 0.403922, 1)
border_width_bottom = 3
border_color = Color(0.4, 0.0235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr1h0"]
bg_color = Color(0.882353, 0.180392, 0.552941, 1)
border_width_bottom = 3
border_color = Color(0.403922, 0.0235294, 0.239216, 1)

[sub_resource type="Theme" id="Theme_q8vn0"]
Button/styles/hover = SubResource("StyleBoxFlat_oi3wl")
Button/styles/normal = SubResource("StyleBoxFlat_dr1h0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pali"]
bg_color = Color(0.662745, 0.0745098, 0.403922, 1)
border_width_bottom = 3
border_color = Color(0.4, 0.0235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y57xe"]
bg_color = Color(0.882353, 0.180392, 0.552941, 1)
border_width_bottom = 3
border_color = Color(0.403922, 0.0235294, 0.239216, 1)

[sub_resource type="Theme" id="Theme_3wci8"]
Button/styles/hover = SubResource("StyleBoxFlat_4pali")
Button/styles/normal = SubResource("StyleBoxFlat_y57xe")

[node name="Settings_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m55c0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 100.0
offset_right = 513.0
offset_bottom = 236.0
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Increase Sensitivity" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_1eeip")
text = "Increase Sensitivity"

[node name="Decrease Sensitivity" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_w4rj8")
text = "Decrease Sensitivity"

[node name="Fullscreen_Toggle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_q8vn0")
text = "Fullscreen"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_3wci8")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Increase Sensitivity" to="." method="_on_increase_sensitivity_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Decrease Sensitivity" to="." method="_on_decrease_sensitivity_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Fullscreen_Toggle" to="." method="_on_fullscreen_toggle_pressed"]
